c_cpp_includes/dtwainx.h

DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_IsInitialized(VOID_PROTOTYPE);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetVersion(LPLONG lpMajor, LPLONG lpMinor,LPLONG lpVersionType);
LONG           DLLENTRY_DEF      DTWAIN_GetStaticLibVersion(VOID_PROTOTYPE);
LONG           DLLENTRY_DEF      DTWAIN_GetTwainMode(VOID_PROTOTYPE);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_IsMsgNotifyEnabled(VOID_PROTOTYPE);
/* Handle to TWAIN Message Window */
HWND           DLLENTRY_DEF      DTWAIN_GetTwainHwnd(VOID_PROTOTYPE);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetSourceVersionNumber(DTWAIN_SOURCE Source,LPLONG pMajor,LPLONG pMinor);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_IsAcquiring(VOID_PROTOTYPE);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_IsCapSupported(DTWAIN_SOURCE Source,LONG lCapability );
/* Setting the Source's unit of measure */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetSourceUnit(DTWAIN_SOURCE Source, LPLONG lpUnit);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_IsFileXferSupported(DTWAIN_SOURCE Source, LONG lFileType);
/* Progress indicator */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_IsIndicatorSupported(DTWAIN_SOURCE Source );
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_IsIndicatorEnabled(DTWAIN_SOURCE Source );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsDeviceEventSupported(DTWAIN_SOURCE Source);
/* Used if the TWAIN DSM is to be called directly by the application */
DTWAIN_IDENTITY  DLLENTRY_DEF DTWAIN_GetTwainAppID(VOID_PROTOTYPE);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsCompressionSupported(DTWAIN_SOURCE Source, LONG Compression);
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_IsFeederEnabled(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_IsFeederLoaded(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_IsFeederSupported(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_IsFeederSensitive(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_IsAutoFeedEnabled(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_IsAutoFeedSupported(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsDuplexSupported(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsDuplexEnabled(DTWAIN_SOURCE Source);
/* Orientation */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsOrientationSupported(DTWAIN_SOURCE Source, LONG Orientation);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsCustomDSDataSupported(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsJobControlSupported(DTWAIN_SOURCE Source, LONG JobControl);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsAutoDeskewSupported(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsAutoDeskewEnabled(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsAutoBorderDetectSupported(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsAutoBorderDetectEnabled(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsLightPathSupported(DTWAIN_SOURCE Source);
/* Lamp State */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsLampSupported(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsLampEnabled(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsLightSourceSupported(DTWAIN_SOURCE Source);
/* Extended image information functions. This function can be called at any time*/
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsExtImageInfoSupported(DTWAIN_SOURCE Source);
/* These functions can only be used in State 7   (when DTWAIN_TN_TRANSFERDONE notification is sent).
   This means that only languages that can utilize DTWAIN_SetCallback or can intercept Window's
   messages can use these functions. */

/* Initialize the extimageinfo interface.  This must be called first! */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_InitExtImageInfo(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsFileSystemSupported(DTWAIN_SOURCE Source );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsBlankPageDetectionOn(DTWAIN_SOURCE Source);
LONG DLLENTRY_DEF DTWAIN_IsDIBBlank(HANDLE hDib, DTWAIN_FLOAT threshold);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsAutoScanEnabled(DTWAIN_SOURCE Source);
/* CAP_DEVICEONLINE */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsDeviceOnLine(DTWAIN_SOURCE Source );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsMaxBuffersSupported(DTWAIN_SOURCE Source, LONG MaxBuf );
/* ICAP_AUTOBRIGHT */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsAutoBrightEnabled(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsAutoBrightSupported(DTWAIN_SOURCE Source);
/* ICAP_AUTOMATICROTATE */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsAutoRotateSupported(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsAutoRotateEnabled(DTWAIN_SOURCE Source);
/* ICAP_OVERSCAN */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsOverscanSupported(DTWAIN_SOURCE Source, LONG SupportValue);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetThreshold(DTWAIN_SOURCE Source,LPDTWAIN_FLOAT Threshold);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetVersionEx(LPLONG lMajor, LPLONG lMinor,LPLONG lVersionType, LPLONG lPatchLevel);
LONG DLLENTRY_DEF DTWAIN_GetTwainTimeout(VOID_PROTOTYPE);
/* OCR functions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_InitOCRInterface(VOID_PROTOTYPE);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsOCREngineActivated(DTWAIN_OCRENGINE OCREngine);
LONG DLLENTRY_DEF DTWAIN_GetTwainAvailability(VOID_PROTOTYPE);