language_bindings/Delphi/dtwain64u.pas

  function DTWAIN_GetSourceProductFamilyW(Source:DTWAIN_SOURCE;szProduct:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceProductFamilyW';
  function DTWAIN_GetSourceProductName(Source:DTWAIN_SOURCE;szProduct:LPWSTR;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceProductName';
  function DTWAIN_GetSourceProductNameA(Source:DTWAIN_SOURCE;szProduct:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceProductNameA';
  function DTWAIN_GetSourceProductNameW(Source:DTWAIN_SOURCE;szProduct:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceProductNameW';
  function DTWAIN_GetSourceUnit(Source:DTWAIN_SOURCE;lpUnit:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceUnit';
  function DTWAIN_GetSourceVersionInfo(Source:DTWAIN_SOURCE;szProduct:LPWSTR;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceVersionInfo';
  function DTWAIN_GetSourceVersionInfoA(Source:DTWAIN_SOURCE;szProduct:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceVersionInfoA';
  function DTWAIN_GetSourceVersionInfoW(Source:DTWAIN_SOURCE;szProduct:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceVersionInfoW';
  function DTWAIN_GetSourceVersionNumber(Source:DTWAIN_SOURCE;pMajor:LPLONG;pMinor:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceVersionNumber';
  function DTWAIN_GetStaticLibVersion:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetStaticLibVersion';
  function DTWAIN_GetTempFileDirectory(szFilePath:LPWSTR;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetTempFileDirectory';
  function DTWAIN_GetTempFileDirectoryA(szFilePath:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetTempFileDirectoryA';
  function DTWAIN_GetTempFileDirectoryW(szFilePath:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetTempFileDirectoryW';
  function DTWAIN_GetThreshold(Source:DTWAIN_SOURCE;var Threshold:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetThreshold';
  function DTWAIN_GetThresholdString(Source:DTWAIN_SOURCE;Threshold:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetThresholdString';
  function DTWAIN_GetThresholdStringA(Source:DTWAIN_SOURCE;Threshold:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetThresholdStringA';
  function DTWAIN_GetThresholdStringW(Source:DTWAIN_SOURCE;Threshold:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetThresholdStringW';
  function DTWAIN_GetTimeDate(Source:DTWAIN_SOURCE;szTimeDate:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetTimeDate';
  function DTWAIN_GetTimeDateA(Source:DTWAIN_SOURCE;szTimeDate:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetTimeDateA';
  function DTWAIN_GetTimeDateW(Source:DTWAIN_SOURCE;szTimeDate:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetTimeDateW';
  function DTWAIN_GetTwainAppID:TWAIN_IDENTITY; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetTwainAppID';
  function DTWAIN_GetTwainAvailability:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetTwainAvailability';
  function DTWAIN_GetTwainHwnd:HWND; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetTwainHwnd';
  function DTWAIN_GetTwainMode:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetTwainMode';
  function DTWAIN_GetTwainTimeout:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetTwainTimeout';
  function DTWAIN_GetVersion(lpMajor:LPLONG;lpMinor:LPLONG;lpVersionType:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetVersion';
  function DTWAIN_GetVersionEx(lMajor:LPLONG;lMinor:LPLONG;lVersionType:LPLONG;lPatchLevel:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetVersionEx';
  function DTWAIN_GetVersionInfo(lpszVer:LPWSTR;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetVersionInfo';
  function DTWAIN_GetVersionInfoA(lpszVer:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetVersionInfoA';
  function DTWAIN_GetVersionInfoW(lpszVer:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetVersionInfoW';
  function DTWAIN_GetVersionString(lpszVer:LPWSTR;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetVersionString';
  function DTWAIN_GetVersionStringA(lpszVer:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetVersionStringA';
  function DTWAIN_GetVersionStringW(lpszVer:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetVersionStringW';
  function DTWAIN_InitExtImageInfo(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_InitExtImageInfo';
  function DTWAIN_GetShortVersionStringA(lpszVer:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetShortVersionStringA';
  function DTWAIN_GetShortVersionStringW(lpszVer:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetShortVersionStringW';
  function DTWAIN_InitExtImageInfo(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_InitExtImageInfo';
  function DTWAIN_InitOCRInterface:DTWAIN_BOOL; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_InitOCRInterface';
  function DTWAIN_IsAcquiring:DTWAIN_BOOL; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_IsAcquiring';
  function DTWAIN_IsAutoBorderDetectEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsAutoBorderDetectEnabled';
  function DTWAIN_IsAutoBorderDetectSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsAutoBorderDetectSupported';
  function DTWAIN_IsAutoBrightEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsAutoBrightEnabled';
  function DTWAIN_IsAutoBrightSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsAutoBrightSupported';
  function DTWAIN_IsAutoDeskewEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsAutoDeskewEnabled';
  function DTWAIN_IsAutoDeskewSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsAutoDeskewSupported';
  function DTWAIN_IsAutoFeedEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsAutoFeedEnabled';
  function DTWAIN_IsAutoFeedSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsAutoFeedSupported';
  function DTWAIN_IsAutoRotateEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsAutoRotateEnabled';
  function DTWAIN_IsAutoRotateSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsAutoRotateSupported';
  function DTWAIN_IsAutoScanEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsAutoScanEnabled';
  function DTWAIN_IsBlankPageDetectionOn(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsBlankPageDetectionOn';
  function DTWAIN_IsCapSupported(Source:DTWAIN_SOURCE;lCapability:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsCapSupported';
  function DTWAIN_IsCompressionSupported(Source:DTWAIN_SOURCE;Compression:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsCompressionSupported';
  function DTWAIN_IsCustomDSDataSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsCustomDSDataSupported';
  function DTWAIN_IsDIBBlank(hDib:DWORD;threshold:DTWAIN_FLOAT):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsDIBBlank';
  function DTWAIN_IsDIBBlankString(hDib:DWORD;threshold:LPCWSTR):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsDIBBlankString';
  function DTWAIN_IsDIBBlankStringA(hDib:DWORD;threshold:PAnsiChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsDIBBlankStringA';
  function DTWAIN_IsDIBBlankStringW(hDib:DWORD;threshold:PWideChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsDIBBlankStringW';
  function DTWAIN_IsDeviceEventSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsDeviceEventSupported';
  function DTWAIN_IsDeviceOnLine(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsDeviceOnLine';
  function DTWAIN_IsDuplexEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsDuplexEnabled';
  function DTWAIN_IsDuplexSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsDuplexSupported';
  function DTWAIN_IsExtImageInfoSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsExtImageInfoSupported';
  function DTWAIN_IsFeederEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsFeederEnabled';
  function DTWAIN_IsFeederLoaded(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsFeederLoaded';
  function DTWAIN_IsFeederSensitive(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsFeederSensitive';
  function DTWAIN_IsFeederSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsFeederSupported';
  function DTWAIN_IsFileSystemSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsFileSystemSupported';
  function DTWAIN_IsFileXferSupported(Source:DTWAIN_SOURCE;lFileType:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsFileXferSupported';
  function DTWAIN_IsIndicatorEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsIndicatorEnabled';
  function DTWAIN_IsIndicatorSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsIndicatorSupported';
  function DTWAIN_IsInitialized:DTWAIN_BOOL; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_IsInitialized';
  function DTWAIN_IsJPEGSupported:DTWAIN_BOOL; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_IsJPEGSupported';
  function DTWAIN_IsJobControlSupported(Source:DTWAIN_SOURCE;JobControl:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsJobControlSupported';
  function DTWAIN_IsLampEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsLampEnabled';
  function DTWAIN_IsLampSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsLampSupported';
  function DTWAIN_IsLightPathSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsLightPathSupported';
  function DTWAIN_IsLightSourceSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsLightSourceSupported';
  function DTWAIN_IsMaxBuffersSupported(Source:DTWAIN_SOURCE;MaxBuf:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsMaxBuffersSupported';
  function DTWAIN_IsMsgNotifyEnabled:DTWAIN_BOOL; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_IsMsgNotifyEnabled';
  function DTWAIN_IsOCREngineActivated(OCREngine:DTWAIN_OCRENGINE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsOCREngineActivated';
  function DTWAIN_IsOrientationSupported(Source:DTWAIN_SOURCE;Orientation:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsOrientationSupported';
  function DTWAIN_IsOverscanSupported(Source:DTWAIN_SOURCE;SupportValue:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsOverscanSupported';
  function DTWAIN_IsPDFSupported:DTWAIN_BOOL; stdcall;
